# VisualScriptEngineWeb

./: .gitignore  CMakeLists.txt  ElectronBuild.bat  EmscriptenBuild.bat  EmscriptenCMake.bat  EmscriptenStartServer.bat  InstallDepsWin.py  README.md  appveyor.yml  emscripten_build.bat  install.txt
Libs/SDL2_gfx-bbcsdl/: SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_rotozoom.c  SDL_stbimage.h  stb_image.h
Libs/VisualScriptEngine/: NUIE_VersionInfo.hpp
Other/swprintf_error/: build.bat  main.cpp
Sources/DemoApp/: main.cpp  main.html
Sources/ElectronApp/: main.js  package.json
Sources/WebApp/: AppEnvironment.cpp  AppEnvironment.hpp  Application.cpp  Application.hpp  BrowserAsyncInterface.cpp  BrowserAsyncInterface.hpp  BrowserInterface.cpp  BrowserInterface.hpp  CustomAppInterface.cpp  CustomAppInterface.hpp  JSONConversion.cpp  JSONConversion.hpp  SDL2Caches.cpp  SDL2Caches.hpp  SDL2Context.cpp  SDL2Context.hpp  main.cpp  main.html
Sources/WebApp/AppFramework/: AppEnvironment.cpp  AppEnvironment.hpp  AppNodeTree.cpp  AppNodeTree.hpp  Application.cpp  Application.hpp  BrowserInterface.cpp  BrowserInterface.hpp  CustomAppInterface.hpp  JSONConversion.cpp  JSONConversion.hpp  Precompiled.hpp  SDL2Context.cpp
Sources/WebServer/: package.json  server.js
Sources/WebSite/: index.html  style.css
Sources/WebSite/editor/: confirmationdialog.js  contextmenu.js  delayedexecutor.js  downloadfile.js  editor.css  editorinterface.js  nodeeditor.js  nodeeditormain.js  nodetree.js  parametersettings.js  popupdiv.js  splashscreen.js  toolbar.js
Sources/WebSite/script/: appinterface.js  application.js  contextmenu.js  modaldiv.js  nodeeditor.js  nodetree.js  parametersettings.js  popupdiv.js
Sources/WebSite/style/: editor.css  style.css  vsew.css
Tools/: GenerateIcons.py
